force-app/main/default/objects/Order_Sync_Event__e/Order_Sync_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event published when a sales order needs to be synchronized with ERP. Enables event-driven, decoupled integration architecture.</description>
    <label>Order Sync Event</label>
    <pluralLabel>Order Sync Events</pluralLabel>
</CustomObject>