force-app/main/default/objects/Order_Sync_Event__e/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Sync operation type: CREATE, UPDATE, or CANCEL.</description>
    <label>Operation</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>