force-app/main/default/objects/Order_Sync_Event__e/fields/Sales_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Id__c</fullName>
    <description>Salesforce ID of the order to sync.</description>
    <label>Sales Order ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>